# stream-catch

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  cobertura.xml  diesel.toml  fly.toml  memo.txt  watch.js
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/auth/: mod.rs  tests.rs
backend/src/axum_http/: default_routers.rs  error_responses.rs  http_serve.rs  mod.rs
backend/src/axum_http/auth/: mod.rs
backend/src/axum_http/routers/: live_following.rs  mod.rs  recording_dashboard.rs  recordings.rs  subscriptions.rs  watch_url.rs
backend/src/config/: config_loader.rs  config_model.rs
backend/src/usecases/: live_following.rs  mod.rs  plan_resolver.rs  recordings.rs  subscriptions.rs  watch_url.rs
crates/: Cargo.toml  lib.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/interfaces/: storage.rs
crates/application/src/usercases/: live_following.rs  recording_dashboard.rs  recording_engine_webhook.rs  recording_job.rs  subscriptions.rs
crates/domain/: Cargo.toml
crates/domain/entities/: app_users.rs  deliveries.rs  follows.rs  invoices.rs  jobs.rs  live_accounts.rs  payment_methods.rs  payment_provider_customers.rs  payments.rs  plans.rs  recordings.rs  subscriptions.rs
crates/domain/repositories/: invoices.rs  job.rs  live_account_recording_engine.rs  live_following.rs  mod.rs  payment_provider_customers.rs  payments.rs  plans.rs  recording_cleanup.rs  recording_dashboard.rs  recording_engine_webhook.rs  recording_upload.rs  recording_view.rs  storage.rs  subscriptions.rs
crates/domain/src/: lib.rs  schema.rs
crates/domain/src/entities/: app_users.rs  deliveries.rs  follows.rs  invoices.rs  jobs.rs  live_accounts.rs  payment_methods.rs  payment_provider_customers.rs  payments.rs  plans.rs  recordings.rs  subscriptions.rs
crates/domain/src/repositories/: job.rs  live_following.rs  mod.rs  recording_dashboard.rs  recording_engine_webhook.rs  recording_job.rs  subscriptions.rs
crates/domain/src/value_objects/: iam.rs  jobs.rs  live_following.rs  mod.rs  recording_engine_webhook.rs  recordings.rs  subscriptions.rs
crates/domain/src/value_objects/enums/: live_account_statuses.rs  platforms.rs  recording_statuses.rs
crates/domain/value_objects/: iam.rs  jobs.rs  live_account_url.rs  live_following.rs  mod.rs  plans.rs  recording_engine_webhook.rs  recording_upload.rs  recordings.rs  storage.rs  subscriptions.rs
crates/domain/value_objects/enums/: billing_modes.rs  mod.rs  payment_methods.rs  payment_statuses.rs  platforms.rs  recording_statuses.rs  subscription_statuses.rs
crates/infra/: Cargo.toml  mod.rs
crates/infra/db/: mod.rs
crates/infra/db/postgres/: mod.rs  postgres_connection.rs  schema.rs
crates/infra/db/postgres/migrations/: supabase_full_migration.sql
crates/infra/db/postgres/migrations/2025-11-10-134920-0000_init_database/: up.sql
crates/infra/db/postgres/migrations/2025-11-10-134920-0001_plan_quota/: down.sql  up.sql
crates/infra/db/postgres/migrations/2025-11-10-134920-0002_plan_stripe_prices/: down.sql  up.sql
crates/infra/db/postgres/migrations/2025-11-10-134920-0003_free_plan_on_signup/: down.sql  up.sql
crates/infra/db/postgres/migrations/2025-11-10-134920-0004_add_provider_subscription_id/: down.sql  up.sql
crates/infra/db/postgres/migrations/2025-11-10-134920-0005_subscription_status_pending_processing/: down.sql  up.sql
crates/infra/db/postgres/migrations/2025-11-20-120000_add_recording_view_indexes/: down.sql  up.sql
crates/infra/db/postgres/migrations/2025-12-23-0006_add_currency_to_invoices_payments/: down.sql  up.sql
crates/infra/db/repositories/: invoices.rs  job.rs  live_account_recording_engine.rs  live_following.rs  mod.rs  payment_provider_customers.rs  payments.rs  plans.rs  recording_cleanup.rs  recording_dashboard.rs  recording_engine_webhook.rs  recording_upload.rs  recording_view.rs  subscriptions.rs
crates/infra/src/: lib.rs
crates/infra/src/postgres/: postgres_connection.rs  schema.rs
crates/infra/src/postgres/migrations/2025-11-10-134920-0000_init_database/: up.sql
crates/infra/src/postgres/repositories/: job.rs  live_following.rs  mod.rs  recording_dashboard.rs  recording_engine_webhook.rs  recording_job.rs  subscriptions.rs
crates/infra/src/storage/: b2.rs  mod.rs  supabase_storage.rs
crates/infra/storages/: b2.rs  mod.rs  s3.rs  supabase_storage.rs  wasabi.rs
crates/infra/web_driver/: insert_live_account.rs  mod.rs
crates/infra_postgres/: Cargo.toml
crates/infra_postgres/src/: lib.rs
crates/infra_postgres/src/application/usercases/: recording_engine_webhook.rs  recording_job.rs  subscriptions.rs
crates/infra_postgres/src/domain/entities/: jobs.rs  live_accounts.rs  mod.rs  payment_methods.rs  plans.rs  recordings.rs
crates/infra_postgres/src/domain/repositories/: live_following.rs  recording_job.rs  subscriptions.rs
crates/infra_postgres/src/domain/value_objects/: iam.rs  jobs.rs  live_following.rs  mod.rs  recordings.rs
crates/infra_postgres/src/domain/value_objects/enums/: platforms.rs  subscription_statuses.rs
crates/infra_postgres/src/infrastructure/axum_http/: http_serve.rs
crates/infra_postgres/src/infrastructure/axum_http/routers/: live_following.rs  (+1 more)
crates/observability/: config.rs  discord.rs  layer.rs  mod.rs  notifier.rs
crates/payments/: stripe_client.rs
worker/: Cargo.toml  docker-compose.yml
worker/src/: lib.rs  main.rs  webhook_server.rs
worker/src/axum_http/: default_routers.rs  http_serve.rs  mod.rs
worker/src/axum_http/routers/: cleanup_recordings.rs  mod.rs  recording_engine_webhook.rs
worker/src/background_worker/: mod.rs  upload_worker.rs  web_driver_service.rs  worker_loop.rs
worker/src/config/: config_loader.rs  config_model.rs
worker/src/recording_engine_web_driver/: worker.rs
worker/src/recording_uploading/: worker.rs
worker/src/services/: mod.rs  web_driver_service.rs  worker_loop.rs
worker/src/usecases/: cleanup_expired_recordings.rs  insert_live_account_recording_engine.rs  mod.rs  recording_engine_webhook.rs
(+77 files in other folders)
