[package]
name = "stream-catch"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "backend",
  "worker",
  "crates/domain",
  "crates/application",
  "crates/infra",
]

[dependencies]
backend = { path = "backend" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
