[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
infra_postgres = { path = "../crates/infra_postgres" }
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
anyhow = "1.0.93"
