[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
crates = { path = "../crates" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
axum = "0.7.7"
url = "2.5.0"
serde_json = "1.0"
tower-http = { version = "0.6.1", features = ["cors", "limit", "timeout", "trace"] }
dotenvy = "0.15.7"
mp4 = "0.14"
chrono = { version = "0.4.38", features = ["serde"] }
