[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "serde_json", "chrono", "uuid"] }
async-trait = "0.1.83"
mockall = "0.13.0"
anyhow = "1.0.93"
